--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Angular QuickStart</title>
+    <title>AngularJS2 Formation</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
+
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link href="assets/css/bootstrap.min.css" rel='stylesheet' type='text/css' media="all" />
+    <link href="assets/css/dashboard.css" rel="stylesheet">
+    <link href="assets/css/style.css" rel='stylesheet' type='text/css' media="all" />
+    <link href='//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
+
 
     <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
@@ -20,6 +27,7 @@
   </head>
 
   <body>
-    <my-app>Loading...</my-app>
+    <app-root>Loading...</app-root>
+
   </body>
 </html>
