--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="assets/css/style.css" rel='stylesheet' type='text/css' media="all" />
     <link href='//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='//fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
-
+    <link href="assets/css/popuo-box.css" rel="stylesheet" type="text/css" media="all" />
 
     <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
