--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,19 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="utf-8">
-  <title>Cli</title>
-  <base href="/">
+  <title>Angular4 Formation</title>
+  <link href="assets/css/bootstrap.min.css" rel='stylesheet' type='text/css' media="all" />
+  <link href="assets/css/dashboard.css" rel="stylesheet">
+  <link href="assets/css/style.css" rel='stylesheet' type='text/css' media="all" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
   <app-root>Loading...</app-root>
 </body>
+
 </html>
