--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Angular4 Formation</title>
+  <base href="/">
+  
   <link href="assets/css/bootstrap.min.css" rel='stylesheet' type='text/css' media="all" />
   <link href="assets/css/dashboard.css" rel="stylesheet">
   <link href="assets/css/style.css" rel='stylesheet' type='text/css' media="all" />
